--- a/src/main/resources/fxml/profile.fxml
+++ b/src/main/resources/fxml/profile.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.habittracker.controller.ProfileController"
-      spacing="20" styleClass="profile-container">
+      fx:controller="org.example.habittracker.controller.ProfileController"
+      spacing="20" styleClass="profile-container, themed-pane">
 
     <padding>
         <Insets top="20" right="20" bottom="20" left="20"/>
@@ -34,7 +33,7 @@
     <VBox spacing="10">
         <Label text="Account Actions" styleClass="subsection-title"/>
 
-        <JFXButton text="Change Password" onAction="#handleChangePassword" styleClass="button-flat"/>
-        <JFXButton text="Delete Account" onAction="#handleDeleteAccount" styleClass="button-danger"/>
+        <Button text="Change Password" onAction="#handleChangePassword" styleClass="flat"/>
+        <Button text="Delete Account" onAction="#handleDeleteAccount" styleClass="danger"/>
     </VBox>
 </VBox>
